2004-06-18  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Add support for 2.6.7.

2004-06-17  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Clobber *.o in RTAI_KBUILD_CLEAN.

2004-06-17  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/sched_rtai/sched_lxrt.c: set a barrier() after context 
	  switching, no need for lxrt_context_switch return, fast_schedule
	  uses internal enq_soft_ready_task so that stealing from Linux can 
	  can be simplified.

2004-06-16  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: rtai-3.1 test #3

2004-06-16  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-addons/comedi/rtai_comedi.h: added the patch from
	Jonathan Bettencourt <jbetten@bu.edu>
	* rtai-lab/xrtailab.cpp: Added support for modules without
	parameters
	* rtai-lab/xrtailab.h: Version changed
	* rtai-lab/matlab/rtmain.c: Added support for modules without 
	RTAI S-Functions	

2004-06-15  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c (lxrt_switch_context):
	Reinstate former assembly code for switching tasks. Remove last
	kludge on enq_soft_ready_task() since the latter change makes it
	useless.

2004-06-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* rtai-core/scripts/generate-doc-and-commit (abs_srcdir): Add a
	script to generate documentation and update the generated doc in
	the cvs repository.

	* rtai-doc/GNUmakefile.am (generate-doc-and-commit): Add a
	makefile rule to run the forementioned script with correct
	arguments.

2004-06-13  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patches to 2.6r5
	final. Add support for 2.6.6.

	* rtai-core/scripts/rtai-load.in: Use modprobe instead of insmod
	for modules from /lib/modules.

	* rtai-core/ipc/mq: Kludge to resolve conflicts with 2.6.6. This
	component is deprecated.

	* rtai-core/sched/rtai/sched_lxrt.c (enq_soft_ready_task): Attempt
	a quick fix to prevent the enqueuing from entering an infinite