@@ -325,11 +325,11 @@ ACLOCAL_AMFLAGS = -I rtai-core/config/autoconf
 
 OPTDIRS = $(am__append_1) $(am__append_2) $(am__append_3) $(am__append_4)
 
-SUBDIRS = rtai-core @RTAI_MAYBE_DOCDIR@ $(OPTDIRS) @RTAI_MAYBE_SIMDIR@
+SUBDIRS = rtai-core @RTAI_MAYBE_DOCDIR@ $(OPTDIRS) $(subdirs)
 
 DIST_SUBDIRS = \
 	@RTAI_MAYBE_DOCDIR@ \
-	@RTAI_MAYBE_SIMDIR@ \
+	$(subdirs) \
 	rtai-core \
 	rtai-testsuite \
 	rtai-compat \
@@ -337,7 +337,7 @@ DIST_SUBDIRS = \
 	rtai-lab
 
 
-EXTRA_DIST = makefile README.INSTALL
+EXTRA_DIST = makefile README.INSTALL @RTAI_MAYBE_SIMDIR@
 
 DISTCLEANFILES = .rtai_config .rtai_config.old .cfok .cfchanged
 subdir = .
@@ -345,7 +345,16 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) \
 	$(top_srcdir)/rtai-core/config/autoconf/mkinstalldirs
 CONFIG_HEADER = rtai_config.h
-CONFIG_CLEAN_FILES =
+CONFIG_CLEAN_FILES = rtai-doc/GNUmakefile rtai-doc/doxygen/GNUmakefile \
+	rtai-doc/doxygen/Doxyfile rtai-doc/docbook/GNUmakefile \
+	rtai-doc/docbook/catalog \
+	rtai-doc/docbook/custom-stylesheets/GNUmakefile \
+	rtai-doc/docbook/custom-stylesheets/xsl/GNUmakefile \
+	rtai-doc/docbook/custom-stylesheets/xsl/common/GNUmakefile \
+	rtai-doc/docbook/custom-stylesheets/xsl/fo/GNUmakefile \
+	rtai-doc/docbook/custom-stylesheets/xsl/html/GNUmakefile \
+	rtai-doc/docbook/custom-stylesheets/xsl/html/chunk.xsl \
+	rtai-doc/docbook/docbook-test/GNUmakefile
 DIST_SOURCES =
 
 RECURSIVE_TARGETS = info-recursive dvi-recursive pdf-recursive \
@@ -402,6 +411,30 @@ $(srcdir)/rtai_config.h.in: @MAINTAINER_MODE_TRUE@ $(top_srcdir)/configure.in $(
 
 distclean-hdr:
 	-rm -f rtai_config.h stamp-h1
+rtai-doc/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/doxygen/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/doxygen/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/doxygen/Doxyfile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/doxygen/Doxyfile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/catalog: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/catalog.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/custom-stylesheets/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/custom-stylesheets/xsl/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/custom-stylesheets/xsl/common/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/common/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/custom-stylesheets/xsl/fo/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/fo/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/custom-stylesheets/xsl/html/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/html/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/custom-stylesheets/xsl/html/chunk.xsl: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/custom-stylesheets/xsl/html/chunk.xsl.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+rtai-doc/docbook/docbook-test/GNUmakefile: $(top_builddir)/config.status $(top_srcdir)/rtai-doc/docbook/docbook-test/GNUmakefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -553,7 +586,7 @@ distcleancheck_listfiles = find . -type f -print
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkinstalldirs) $(distdir)/rtai-core/config/autoconf $(distdir)/rtai-core/scripts $(distdir)/rtai-doc/docbook $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/html $(distdir)/rtai-doc/doxygen
+	$(mkinstalldirs) $(distdir)/rtai-core/config/autoconf $(distdir)/rtai-core/scripts $(distdir)/rtai-doc $(distdir)/rtai-doc/docbook $(distdir)/rtai-doc/docbook/custom-stylesheets $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/common $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/fo $(distdir)/rtai-doc/docbook/custom-stylesheets/xsl/html $(distdir)/rtai-doc/docbook/docbook-test $(distdir)/rtai-doc/doxygen
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
@@ -820,6 +853,7 @@ dist-hook:
 	$(MAKE) -C $(distdir)/rtai-core/config/kconfig \
 	-f Makefile.kconfig distclean srctree=$(distdir)
 	rm -fr `find $(distdir) -name CVS`
+	test -e $(srcdir)/rtai-doc || rm -fr $(distdir)/rtai-doc
 
 dev devices:
 	@if test x$(DESTDIR) = x; then \
